--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,15 +1,9 @@
 <mat-toolbar>
- 
-    <header >
-        <nav>
-            <button class="logo" mat-button routerLink="/"><img src="./img/Screenshot_20230713_112026_Chrome-removebg-preview.png" alt=""></button>
-           <span class="menu-spacer"></span>
-            <ul class="navList">
-                <button mat-button routerLink="Home">Home</button>
-                <button mat-button routerLink="Product">Product</button>
-                <button mat-button routerLink="Sign">Sign up</button>
-               
-            </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <h1>Ipac</h1>
+        <span class="menu-spacer"></span>
+        <button mat-button routerLink="/">Home</button>
+        <button mat-button routerLink="product">Product</button>
+        <button mat-button routerLink="SignUp">Sign Up</button>
+    </div>
 </mat-toolbar>
