--- a/src/app/nav-menu/nav-menu.component.scss
+++ b/src/app/nav-menu/nav-menu.component.scss
@@ -1,44 +1,26 @@
 @import "../app.component.scss";
 
-header{ 
-
-.logo{
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-
-    .logo:hover{
-        opacity: 0.7;
-    }
-
-    img{
-        max-width: 80px;
-    }
-}
-
-.logo {
-    font-size: 24px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
-
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: black;
-    height: 8vh;
-
-    .navList{
-        list-style: none;
+mat-toolbar {
+    background-color: $preto;
+    color: $branco;
+    .container {
+        width: 1140px;
         display: flex;
-
-        li{
-            letter-spacing: 3px;
-            margin-left: 32px;
+        margin: auto;
+        h1 {
+            font-family: $fonte-principal;
+            font-size: $grande;
+            color: $branco;
+            padding-top: 15px; 
         }
-
+        .menu-spacer {
+            flex: 1 1 auto;
+        }
+        button {
+            margin-top: 10px;
+            &:hover {
+                color: $prata;
+            }
+        }
     }
-}
-
 }
