--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@ $cinza-claro: #D3D3D3;
 $cinza-medio: #1E2761;
 $cinza-escuro: #45484A;
 $preto: #000000;
+$prata:#c0c0c0;
 
 /* SOMBRAS */
 $card-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
