--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,47 @@
+<main>
+  <div class="banner" id="banner_one">
+    <h1>iPhone SE</h1>
+    <h2>Lots of love. Less to spend.</h2>
+    <p><a routerLink="'announcements'">Learn more ></a></p>
+  </div>
+
+  <div class="banner" id="banner_two">
+    <h1>iPhone 11</h1>
+    <h2>Just the right amount of everything.</h2>
+    <p><a routerLink="'watch-details'">Learn more ></a></p>
+  </div>
+
+  <div class="banner" id="banner_three">
+    <h1>iPhone 11 Pro</h1>
+    <h2>Pro cameras. Pro display. Pro performance.</h2>
+    <p><a href="/">Learn more ></a></p>
+  </div>
+
+  <div class="category">
+    <div class="box" id="box1">
+      <h1>WWDC20</h1>
+      <h2>Take a look at all of the announcements.</h2> <br>
+      <p><a routerLink="announcements">Watch the keynote on our US site ></a></p>
+    </div>
+    <div class="box" id="box2">
+      <h1>Watch</h1>
+      <p class="label">Series 5</p>
+      <h2>With the Always-On Retina Display.</h2>
+      <p><a routerLink="watch-details">Learn more ></a></p>
+    </div>
+  </div>
+  <div class="category">
+    <div class="box" id="box3">
+      <h1>MacBook Pro</h1>
+      <h2>Power. Moves.</h2> <br>
+      <p><a href="/">Learn more ></a></p>
+    </div>
+    <div class="box" id="box4">
+      <h1>iPad Pro</h1>
+      <h2>Your next computer is not a computer.</h2>
+      <p><a href="/">Learn more ></a></p>
+    </div>
+  </div>
+</main>
 
 
