--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -4,6 +4,6 @@
         <span class="menu-spacer"></span>
         <button mat-button routerLink="/">Home</button>
         <button mat-button routerLink="product">Product</button>
-        <button mat-button routerLink="SignUp">Sign Up</button>
+        <button mat-button routerLink="sign-up">Sign Up</button>
     </div>
 </mat-toolbar>
