--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,61 +1,63 @@
-<section id="imoveis-favoritos">
+<div>
+  <section id="produto-favoritos">
     <h2>Confira aqui os seus imóveis favoritos:</h2>
     <mat-grid-list cols="3" rowHeight="3:4">
-        <div *ngFor="let imovel of imoveis; let i = index">
-            <mat-grid-tile *ngIf="imovel.favorito">
-                <mat-card>
-                    <img mat-card-image [src]="imovel.foto" [alt]="imovel.titulo" />
-                    <mat-card-content>
-                        <h3>{{ imovel.titulo }}</h3>
-                        <ul>
-                            <li>Quartos: {{ imovel.quartos }}</li>
-                            <li>Banheiros: {{ imovel.banheiros }}</li>
-                            <li>Metragem: {{ imovel.area }} m²</li>
-                            <li>Preço: {{ imovel.preco | currency }}</li>
-                        </ul>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button
-                            [class]="imovel.favorito === false ? 'favorite' : 'favorite-checked'"
-                            [title]="imovel.favorito === false ? 'Adicionar aos favoritos' : 'Remover dos favoritos'"
-                            mat-button
-                            (click)="toogleFavorito(i)">
-                        <mat-icon aria-hidden="false" aria-label="Favoritos" fontIcon="favorite"></mat-icon>
-                    </button> 
-                        <button mat-button (click)="verDetalhes(imovel.id)">Mais detalhes</button>
-                    </mat-card-actions>
-                </mat-card>
-            </mat-grid-tile>
-        </div>
+      <mat-grid-tile *ngFor="let produto of produtos; let i = index">
+        <mat-card *ngIf="produto.favorito">
+          <img mat-card-image [src]="produto.foto" [alt]="produto.titulo" />
+          <mat-card-content>
+            <h3>{{ produto.titulo }}</h3>
+            <ul>
+              <li>memoria: {{ produto.memoria }}</li>
+              <li>ram: {{ produto.ram }}</li>
+              <li>Sistema Operacional: {{ produto.sistema }}</li>
+              <li>Preço: {{ produto.preco | currency}}</li>
+            </ul>
+          </mat-card-content>
+          <mat-card-actions>
+            <button
+              [class]="produto.favorito === false ? 'favorite' : 'favorite-checked'"
+              [title]="produto.favorito === false ? 'Adicionar aos favoritos' : 'Remover dos favoritos'"
+              mat-button
+              (click)="toggleFavorito(i)"
+            >
+              <mat-icon aria-hidden="false" fontIcon="favorite"></mat-icon>
+            </button>
+            <a mat-button routerLink="['/', produto.id]">Mais detalhes</a>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
     </mat-grid-list>
-</section>
-<section id="lista-imoveis">
-    <h2>Todos os imoveis:</h2>
+  </section>
+
+  <section id="lista-produto">
+    <h2>Todos os produtos:</h2>
     <mat-grid-list cols="3" rowHeight="3:4">
-        <mat-grid-tile *ngFor="let imovel of imoveis; let i = index">
-            <mat-card>
-                <img mat-card-image [src]="imovel.foto" [alt]="imovel.titulo" />
-                <mat-card-content>
-                    <h3>{{ imovel.titulo }}</h3>
-                    <ul>
-                        <li>Quartos: {{ imovel.quartos }}</li>
-                        <li>Banheiros: {{ imovel.banheiros }}</li>
-                        <li>Metragem: {{ imovel.area }} m²</li>
-                        <li>Preço: {{ imovel.preco | currency }}</li>
-                    </ul>
-                </mat-card-content>
-                <mat-card-actions>
-                    <button
-                        [class]="imovel.favorito === false ? 'favorite' : 'favorite-checked'"
-                        [title]="imovel.favorito === false ? 'Adicionar aos favoritos' : 'Remover dos favoritos'"
-                        mat-button
-                        (click)="toogleFavorito(i)">
-                        <mat-icon aria-hidden="false" aria-label="Favoritos" fontIcon="favorite"></mat-icon>
-                    </button> 
-                    <button mat-button (click)="verDetalhes(imovel.id)">Mais detalhes</button>
-                </mat-card-actions>
-            </mat-card>
-        </mat-grid-tile>
+      <mat-grid-tile *ngFor="let produto of produtos; let i = index">
+        <mat-card>
+          <img mat-card-image [src]="produto.foto" [alt]="produto.titulo" />
+          <mat-card-content>
+            <h3>{{ produto.titulo }}</h3>
+            <ul>
+              <li>memoria: {{ produto.memoria }}</li>
+              <li>ram: {{ produto.ram }}</li>
+              <li>Sistema Operacional: {{ produto.sistema }}</li>
+              <li>Preço: {{ produto.preco | currency }}</li>
+            </ul>
+          </mat-card-content>
+          <mat-card-actions>
+            <button
+              [class]="produto.favorito === false ? 'favorite' : 'favorite-checked'"
+              [title]="produto.favorito === false ? 'Adicionar aos favoritos' : 'Remover dos favoritos'"
+              mat-button
+              (click)="toggleFavorito(i)"
+            >
+              <mat-icon aria-hidden="false" fontIcon="favorite"></mat-icon>
+            </button>
+            <a mat-button routerLink="['/', produto.id]">Mais detalhes</a>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
     </mat-grid-list>
-</section>
+  </section>
 </div>
