--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,30 @@
-<p>sign-up works!</p>
+<div class="container">
+  <h1>Fale Conosco</h1>
+  <form (ngSubmit)="submitForm()">
+      <mat-form-field>
+          <mat-label>Digite seu nome:</mat-label>
+          <input matInput placeholder="Fulano da Silva" [formControl]="nome" required />
+          <mat-error ngIf="nome.invalid">{{ getErrorMessage() }}</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+          <mat-label>Digite seu email:</mat-label>
+          <input matInput placeholder="pat@example.com" [formControl]="email" required>
+          <mat-error ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+          <mat-label>Selecione um assunto</mat-label>
+          <mat-select [formControl]="assunto">
+              <mat-option value="suporte">Estou tendo problema ao realizar minha compra</mat-option>
+              <mat-option value="suporte">Quero fazer uma reclamação</mat-option>
+          </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+          <mat-label>Digite sua mensagem</mat-label>
+          <textarea matInput [formControl]="mensagem"></textarea>
+          <mat-error *ngIf="mensagem.invalid">{{getErrorMessage()}}</mat-error>
+      </mat-form-field>
+      <button class="botao" mat-button [disabled]="(nome.invalid || email.invalid || mensagem.invalid ? 'true' : '')" type="submit">
+          Enviar
+      </button>
+  </form>
+</div>
